Se hicieron cambios al boton de submit al cambiar su margen

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <label class="form__label">
                 <input type="password" placeholder="Contraseña" class="form__input form__input--color--gray">
             </label>
-            <label class="form__label">
+            <label class="form__label-1">
               <input class="form__submit" type="submit" value="Enviar Mensaje">
           </label>
         </form>
